Some bug fixes:
-no extra space in add word form
-X is fisible in edit form close btn
-message popup is better visible now

--- a/src/assets/global-style.scss
+++ b/src/assets/global-style.scss
@@ -58,7 +58,7 @@ $shadow: #888;
   height: 48px;
   transition: transform 0.2s;
 }
-.navigation_span, .addword_span, .moveword_close-span, .word_details-close-span {
+.navigation_span, .addword_span, .moveword_close-span, .editword_close-span, .word_details-close-span {
   display: block;
   height: 1px;
   width: 40px;
